<resources>
    <string name="app_name">Farm6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Orders">View Orders</string>
    <string name="Stock">View Stock</string>




    <string name="title_home">Home</string>
    //Specific to Farmer User
    <string name="title_stock">Stock</string>
    <string name="title_orders">Orders</string>
    //Order
    <string name="process_order">Process</string>
    <string name="order_unprocessed">Unprocessed</string>
    <string name="order_processed">Processed</string>
    <string name="order_button_text">View</string>
    //Specific to Buyer
    <string name="title_myFarmers">My Farmers</string>


    <string-array name="Veggies">
        <item>Carrot</item>
        <item>Garlic</item>
        <item>Onion</item>
        <item>Potato</item>
    </string-array>

    <string-array name="OrderNumbers">
        <item>Order Number 1</item>
        <item>Order Number 2</item>
        <item>Order Number 3</item>
        <item>Order Number 4</item>
        <item>Order Number 5</item>
        <item>Order Number 6</item>
        <item>Order Number 7</item>
        <item>Order Number 8</item>
        <item>Order Number 9</item>
        <item>Order Number 10</item>
    </string-array>

    <string-array name="Status">
        <item>Unprocessed</item>
        <item>Unprocessed</item>
        <item>Processed</item>
        <item>Processed</item>
        <item>Processed</item>
        <item>Processed</item>
        <item>Processed</item>
        <item>Processed</item>
        <item>Processed</item>
        <item>Processed</item>
    </string-array>
        <!-- TODO: Remove or change this placeholder text -->

    <string name="select">Select if you are a Farmer</string>
    <string name="email">Email</string>
    <string name="enter_password_hint">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="farmer_home">Farmer Home</string>
    <string name="create_account">Create Account</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="pword">Password</string>
    <string name="submit">Submit</string>
    <string name="Business_Name">Business Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="title_findFarmers">Find Farmer</string>
    <string name="welcome_back">Welcome back</string>
    <string name="process_order_button">Process Order</string>
    <string name="My_Orders">My Orders</string>
    <string name="My_Farmers">My Farmers</string>
    <string name="find_farmers">Find Farmers</string>
    <string name="current_order">Current Order</string>
    <string name="Update_Stock">Update Products</string>
    <string name="addItem">Add Product</string>
    <string name="productname">Product Name</string>
    <string name="product_hint_name">Name</string>
    <string name="product_hint_price">Price</string>
    <string name="product_hint_quantity">Quantity</string>
    <string name="add_and_view">Add And View</string>
    <string name="add_another">Add Another</string>
    <string name="enter_new_price">Enter New Price</string>
    <string name="enter_new_quantity">Enter New Quantity</string>
    <string name="Update">Update</string>


</resources>


