<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:id="@+id/new_product_name"
            android:textColor="@color/black"
            android:gravity="center"
            android:inputType="text"
            android:hint="@string/product_hint_name">
        </EditText>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:id="@+id/new_product_price"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:gravity="center"
            android:hint="@string/product_hint_price">
        </EditText>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:id="@+id/new_product_quantity"
            android:textColor="@color/black"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/product_hint_quantity">
        </EditText>

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/Farmer_Add_And_View"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:text="@string/add_and_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/Add_Another"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:text="@string/add_another"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>