<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backpic"
    android:id="@+id/container"
    tools:context=".LoginActivity"
    android:padding ="10dp">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp">
        <RadioButton
            android:id="@+id/radio"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/select"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailogin_edittext"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:text="js@gmail.com"
                android:background="#fff"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_edittext"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_password_hint"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="pass123"
                android:background="#fff"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@android:color/background_light"
            android:text="@string/login"
            android:id="@+id/View_Orders"
            android:background="@color/purple_500"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:paddingEnd="20dp"
                android:text="@string/register"
                android:layout_gravity="center_horizontal"
                android:id="@+id/register_textview"
                app:layout_constraintTop_toBottomOf="@+id/View_Orders"
                android:textSize="22sp"
                android:paddingRight="20dp" />

            <TextView
                android:id="@+id/forget_password_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <!-- <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:visibility="invisible" />-->


    </LinearLayout>


</RelativeLayout>