<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Farmer.FarmerMainActivity"
    android:background="@drawable/user_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/My_Orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/My_Orders"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="132dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/my_Farmers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/My_Farmers"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="232dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/find_farmers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_farmers"
            android:textSize="24sp" />

        <!--
        <Button
            android:id="@+id/current_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_order"
            android:textSize="24sp" />
        -->
        <View
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>